cc.creativecomputing/log/noname-2011-05-28_13-27-47.txt
[Sat May 28 13:27:47 CEST 2011] [CCLog Line:177:initialize] [INFO] logging to file: log/noname-2011-05-28_13-27-47.txt
[Sat May 28 13:27:47 CEST 2011] [CCApp:display] [SEVERE] com.jogamp.opencl.CLException$CLBuildProgramFailureException: 
CLDevice [id: 16918016 name: GeForce 8600M GT type: GPU profile: FULL_PROFILE] build log:
<program source>:2:30: error: use of undeclared identifier 'G_MASK'
         int index = (lattice1d(i) & G_MASK) * G_VECSIZE;
                                     ^
<program source>:3:12: error: use of undeclared identifier 'G'
         float g = G[index + 0];
                   ^
<program source>:8:30: error: use of undeclared identifier 'G_MASK'
         int index = (lattice2d(i) & G_MASK) * G_VECSIZE;
                                     ^
<program source>:9:22: error: use of undeclared identifier 'G'
         float2 g = (float2)(G[index + 0], G[index + 1]);
                             ^
<program source>:9:36: error: use of undeclared identifier 'G'
         float2 g = (float2)(G[index + 0], G[index + 1]);
                                           ^
<program source>:14:30: error: use of undeclared identifier 'G_MASK'
         int index = (lattice3d(i) & G_MASK) * G_VECSIZE;
                                     ^
<program source>:15:22: error: use of undeclared identifier 'G'
         float4 g = (float4)(G[index + 0], G[index + 1], G[index + 2], 1.0f);
                             ^
<program source>:15:36: error: use of undeclared identifier 'G'
         float4 g = (float4)(G[index + 0], G[index + 1], G[index + 2], 1.0f);
                                           ^
<program source>:15:50: error: use of undeclared identifier 'G'
         float4 g = (float4)(G[index + 0], G[index + 1], G[index + 2], 1.0f);
                                                         ^
<program source>:27:11: error: use of undeclared identifier 'P_MASK'
     ip &= P_MASK;
           ^
<program source>:42:11: error: use of undeclared identifier 'P_MASK'
     ip &= P_MASK;
           ^
<program source>:74:11: error: use of undeclared identifier 'P_MASK'
     ip &= P_MASK;
           ^
<program source>:134:53:{134:46-134:52}: error: member reference base type 'float' is not a structure or union
         float myDisplacement = myFuturePosition.y - height.x * theScale.y + theOffset.y + theVelocities[myIndex].y;
                                                     ~~~~~~ ^ [error: CL_BUILD_PROGRAM_FAILURE]
	at com.jogamp.opencl.CLException.newException(CLException.java:78)
	at com.jogamp.opencl.CLProgram.build(CLProgram.java:381)
	at cc.creativecomputing.opencl.CCCLProgram.build(CCCLProgram.java:187)
	at cc.creativecomputing.opencl.CCCLProgram.build(CCCLProgram.java:182)
	at cc.creativecomputing.particles.forces.CCNoiseDisplace.build(CCNoiseDisplace.java:75)
	at cc.creativecomputing.particles.CCParticles.addForce(CCParticles.java:271)
	at cc.creativecomputing.particles.demo.CCNoiseDisplaceDemo.setup(CCNoiseDisplaceDemo.java:34)
	at cc.creativecomputing.CCApp.display(CCApp.java:562)
	at jogamp.opengl.GLDrawableHelper.display(GLDrawableHelper.java:191)
	at javax.media.opengl.awt.GLCanvas$DisplayAction.run(GLCanvas.java:873)
	at jogamp.opengl.GLDrawableHelper.invokeGL(GLDrawableHelper.java:363)
	at javax.media.opengl.awt.GLCanvas.maybeDoSingleThreadedWorkaround(GLCanvas.java:769)
	at javax.media.opengl.awt.GLCanvas.display(GLCanvas.java:388)
	at javax.media.opengl.awt.GLCanvas.paint(GLCanvas.java:487)
	at sun.awt.RepaintArea.paintComponent(RepaintArea.java:276)
	at sun.awt.RepaintArea.paint(RepaintArea.java:241)
	at apple.awt.ComponentModel.handleEvent(ComponentModel.java:263)
	at java.awt.Component.dispatchEventImpl(Component.java:4790)
	at java.awt.Component.dispatchEvent(Component.java:4544)
	at java.awt.EventQueue.dispatchEvent(EventQueue.java:635)
	at java.awt.EventDispatchThread.pumpOneEventForFilters(EventDispatchThread.java:296)
	at java.awt.EventDispatchThread.pumpEventsForFilter(EventDispatchThread.java:211)
	at java.awt.EventDispatchThread.pumpEventsForHierarchy(EventDispatchThread.java:201)
	at java.awt.EventDispatchThread.pumpEvents(EventDispatchThread.java:196)
	at java.awt.EventDispatchThread.pumpEvents(EventDispatchThread.java:188)
	at java.awt.EventDispatchThread.run(EventDispatchThread.java:122)

